--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.19",
+    "@types/bcrypt": "^5.0.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
@@ -9,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "name": "node-server",
   "version": "1.0.0",
@@ -18,7 +21,8 @@
   "scripts": {
     "dev": "nodemon ./src/main.ts",
     "build": "tsc",
-    "start": "node ./dist/main.js"
+    "start": "node ./dist/main.js",
+    "genSalt": "node auth/genSalt.mjs"
   },
   "author": "Vladimir Sitchikhin <vsitchikhin@gmail.com>",
   "license": "ISC",
