--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "nodemailer": "^6.9.1",
     "tspath": "^2.6.8"
   },
   "name": "node-server",
